# maios

./: .gitignore  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  Makefile  README.md  build-and-run.cmd  build-and-run.ps1  qemu-cpus.ps1  qemu-monitor.ps1  run.bat  run.ps1
.github/workflows/: build.yaml
applications/audio_test/: Cargo.toml
applications/audio_test/src/: lib.rs
applications/basename/: Cargo.toml
applications/basename/src/: lib.rs
applications/bm/: Cargo.toml
applications/bm/src/: lib.rs
applications/cal/: Cargo.toml
applications/cal/src/: lib.rs
applications/cat/src/: lib.rs
applications/cd/src/: lib.rs
applications/cp/: Cargo.toml
applications/cp/src/: lib.rs
applications/df/: Cargo.toml
applications/df/src/: lib.rs
applications/dirname/: Cargo.toml
applications/dirname/src/: lib.rs
applications/download/: Cargo.toml
applications/download/src/: lib.rs
applications/du/: Cargo.toml
applications/du/src/: lib.rs
applications/env/: Cargo.toml
applications/env/src/: lib.rs
applications/explorer/: Cargo.toml
applications/explorer/src/: lib.rs
applications/factor/: Cargo.toml
applications/factor/src/: lib.rs
applications/false_cmd/: Cargo.toml
applications/false_cmd/src/: lib.rs
applications/file_manager/: Cargo.toml
applications/file_manager/src/: lib.rs
applications/find/: Cargo.toml
applications/free/: Cargo.toml
applications/grep/: Cargo.toml
applications/head/: Cargo.toml
applications/head/src/: lib.rs
applications/help/: Cargo.toml
applications/help/src/: lib.rs
applications/hostname/: Cargo.toml
applications/hull/: Cargo.toml
applications/kill/: Cargo.toml
applications/mv/: Cargo.toml
applications/nl/: Cargo.toml
applications/printenv/: Cargo.toml
applications/ps/: Cargo.toml
applications/rev/: Cargo.toml
applications/run/: Cargo.toml
applications/run/src/: lib.rs
applications/runpe/: Cargo.toml
applications/runpe/src/: lib.rs
applications/seq/: Cargo.toml
applications/shell/: Cargo.toml
applications/sleep_cmd/: Cargo.toml
applications/sort/: Cargo.toml
applications/syscall_trace/: Cargo.toml
applications/syscall_trace/src/: lib.rs
applications/tail/: Cargo.toml
applications/task_manager/: Cargo.toml
applications/task_manager/src/: lib.rs
applications/taskbar/: Cargo.toml
applications/taskbar/src/: lib.rs
applications/tee/: Cargo.toml
applications/test_win_compat/: Cargo.toml
applications/touch/: Cargo.toml
applications/touch/src/: lib.rs
applications/tr/: Cargo.toml
applications/true_cmd/: Cargo.toml
applications/uniq/: Cargo.toml
applications/uptime/: Cargo.toml
applications/wc/: Cargo.toml
applications/xxd/: Cargo.toml
applications/yes/: Cargo.toml
book/: book.toml
cfg/: README.md
kernel/ahci/: Cargo.toml
kernel/ahci/src/: lib.rs
kernel/ap_start/: Cargo.toml
kernel/app_io/: Cargo.toml
kernel/audio_mixer/: Cargo.toml
kernel/audio_mixer/src/: lib.rs
kernel/block_cache/: Cargo.toml
kernel/captain/: Cargo.toml
kernel/console/: Cargo.toml
kernel/deferred_interrupt_tasks/: Cargo.toml
kernel/device_manager/: Cargo.toml
kernel/device_manager/src/: lib.rs
kernel/disk_mount/: Cargo.toml
kernel/disk_mount/src/: lib.rs
kernel/dns_resolver/: Cargo.toml
kernel/dns_resolver/src/: lib.rs
kernel/elf_loader/: Cargo.toml
kernel/elf_loader/src/: lib.rs
kernel/environment/: Cargo.toml
kernel/environment/src/: lib.rs
kernel/event_types/: Cargo.toml
kernel/exceptions_full/: Cargo.toml
kernel/fat32/: Cargo.toml
kernel/fat32/src/: lib.rs
kernel/framebuffer_compositor/: Cargo.toml
kernel/framebuffer_drawer/: Cargo.toml
kernel/fs_node/: Cargo.toml
kernel/intel_hda/: Cargo.toml
kernel/intel_hda/src/: codec.rs  lib.rs  regs.rs  stream.rs
kernel/keyboard/: Cargo.toml
kernel/linux_syscall/: Cargo.toml
kernel/linux_syscall/src/: fd_table.rs  lib.rs
kernel/mai_ui/: Cargo.toml
kernel/mai_ui/src/: draw.rs  lib.rs  theme.rs  widgets.rs
kernel/maios_syscall/: Cargo.toml
kernel/maios_syscall/src/: audio.rs  error.rs  event_io.rs  extended.rs  file_io.rs  futex.rs  graphics.rs  lib.rs  memory.rs  process.rs  resource.rs  signals.rs  socket.rs  system.rs  time.rs  trace.rs
kernel/memory_swap/: Cargo.toml
kernel/memory_swap/src/: lib.rs
kernel/mgi/: Cargo.toml
kernel/mgi/src/: lib.rs
kernel/mhc/: Cargo.toml
kernel/mhc/src/: command.rs  device.rs  fence.rs  lib.rs  memory.rs  plugin.rs  queue.rs  scheduler.rs  shader.rs  task.rs
kernel/mhc/src/drivers/: mod.rs  software.rs  virtio_gpu.rs
kernel/mio/: Cargo.toml
kernel/mio/src/: buffer.rs  cqe.rs  lib.rs  ops.rs  poll.rs  ring.rs  sqe.rs  stats.rs  worker.rs
kernel/mks/: Cargo.toml
kernel/mks/src/: deadline.rs  eevdf.rs  lib.rs  plugin.rs  realtime.rs  runqueue.rs  stats.rs  topology.rs
kernel/mouse/: Cargo.toml
kernel/mps/: Cargo.toml
kernel/nano_core/: Cargo.toml
kernel/net/: Cargo.toml
kernel/nvme/: Cargo.toml
kernel/partition_device/: Cargo.toml
kernel/partition_table/: Cargo.toml
kernel/pe_loader/: Cargo.toml
kernel/scheduler/: Cargo.toml
kernel/scheduler_epoch/: Cargo.toml
kernel/scheduler_round_robin/: Cargo.toml
kernel/spawn/: Cargo.toml
kernel/storage_manager/: Cargo.toml
kernel/syscall/: Cargo.toml
kernel/task_fs/: Cargo.toml
kernel/usb_hid/: Cargo.toml
kernel/vfs_node/: Cargo.toml
kernel/wasi_interpreter/: Cargo.toml
kernel/window/: Cargo.toml
kernel/window_inner/: Cargo.toml
kernel/window_manager/: Cargo.toml
kernel/windows_syscall/: Cargo.toml
kernel/xhci/: Cargo.toml
libs/gamepad_data/: Cargo.toml
libs/stdio/: Cargo.toml
ports/doom/: Makefile  README.md  doomgeneric_maios.c
theseus_features/: Cargo.toml
tlibc/: Cargo.toml
tlibc/include/: ctype.h  dirent.h  dlfcn.h  errno.h  fcntl.h  maios.h  pthread.h  setjmp.h  signal.h  stdlib.h  time.h  unistd.h
tlibc/src/: ctype.rs  dirent.rs  dlfcn.rs  file_io.rs  lib.rs  maios_syscall.rs  pthread.rs  setjmp.rs  signal_funcs.rs  stdlib.rs  time_funcs.rs  unistd.rs
tools/: create_disk.ps1  create_disk.sh
(+150 files in other folders)
