[package]
name = "cp"
version = "0.1.0"
authors = ["MaiOS"]

[dependencies]
getopts = "0.2.21"

[dependencies.app_io]
path = "../../kernel/app_io"

[dependencies.task]
path = "../../kernel/task"

[dependencies.path]
path = "../../kernel/path"

[dependencies.fs_node]
path = "../../kernel/fs_node"

[dependencies.heapfile]
path = "../../kernel/heapfile"

[dependencies.vfs_node]
path = "../../kernel/vfs_node"

[lib]
crate-type = ["rlib"]
