[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

[lib]
name = "explorer"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
mai_ui = { path = "../../kernel/mai_ui" }
color = { path = "../../kernel/color" }
shapes = { path = "../../kernel/shapes" }
spawn = { path = "../../kernel/spawn" }
task = { path = "../../kernel/task" }
mod_mgmt = { path = "../../kernel/mod_mgmt" }
path = { path = "../../kernel/path" }
fs_node = { path = "../../kernel/fs_node" }
window_inner = { path = "../../kernel/window_inner" }
root = { path = "../../kernel/root" }
io = { path = "../../kernel/io" }
memfs = { path = "../../kernel/memfs" }
vfs_node = { path = "../../kernel/vfs_node" }

core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"] }
spin = "0.9.4"
log = "0.4"

[dependencies.event_types]
path = "../../kernel/event_types"

[dependencies.window_manager]
path = "../../kernel/window_manager"

[dependencies.scheduler]
path = "../../kernel/scheduler"

[dependencies.sleep]
path = "../../kernel/sleep"
