[package]
name = "file_manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "file_manager"
crate-type = ["rlib"]

[dependencies]
log             = "0.4.8"
spin            = "0.9.4"
font            = { path = "../../kernel/font"               }
color           = { path = "../../kernel/color"              }
shapes          = { path = "../../kernel/shapes"             }
framebuffer     = { path = "../../kernel/framebuffer"        }
framebuffer_drawer = { path = "../../kernel/framebuffer_drawer" }
fs_node         = { path = "../../kernel/fs_node"            }
root            = { path = "../../kernel/root"               }
path            = { path = "../../kernel/path"               }
task            = { path = "../../kernel/task"               }
window          = { path = "../../kernel/window"             }
window_manager  = { path = "../../kernel/window_manager"     }
scheduler       = { path = "../../kernel/scheduler"          }
event_types     = { path = "../../kernel/event_types"        }
keycodes_ascii  = { path = "../../libs/keycodes_ascii"       }
spawn           = { path = "../../kernel/spawn"              }
mod_mgmt        = { path = "../../kernel/mod_mgmt"           }