[package]
name = "help"
version = "0.1.0"
description = "Affiche toutes les commandes disponibles dans MaiOS"
edition = "2021"

[dependencies]
app_io = { path = "../../kernel/app_io" }
task   = { path = "../../kernel/task" }
fs_node = { path = "../../kernel/fs_node" }
getopts = "0.2.21"

[lib]
crate-type = ["rlib"]
