[package]
name = "syscall_trace"
version = "0.1.0"
authors = ["MaiOS Contributors"]
description = "Toggle syscall tracing on/off at runtime"
edition = "2021"

[dependencies]
log = "0.4.8"

[target.'cfg(target_arch = "x86_64")'.dependencies]
maios_syscall = { path = "../../kernel/maios_syscall" }

[lib]
crate-type = ["rlib"]
