[package]
name    = "ahci"
version = "0.1.0"
edition = "2021"

[lib]
name       = "ahci"
crate-type = ["rlib"]

[dependencies]
log            = { version = "0.4", default-features = false }
spin           = { version = "0.9", default-features = false, features = ["mutex", "once"] }
memory         = { path = "../memory" }
pci            = { path = "../pci" }
storage_device = { path = "../storage_device" }
io             = { path = "../io" }
