[package]
name = "audio_mixer"
version = "0.1.0"
authors = ["MaiOS Contributors"]
description = "Kernel audio mixer - PCM ring buffer for mixing and playback"
edition = "2021"

[dependencies]
log = "0.4.8"
spin = "0.9.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
memory = { path = "../memory" }
memory_structs = { path = "../memory_structs" }
pte_flags = { path = "../pte_flags" }

[lib]
crate-type = ["rlib"]
