[package]
name    = "device_manager"
version = "0.1.0"
edition = "2021"

[lib]
name       = "device_manager"
crate-type = ["rlib"]

[dependencies]
log             = { version = "0.4", default-features = false }
spin            = { version = "0.9", default-features = false, features = ["mutex", "once"] }

acpi            = { path = "../acpi" }
console         = { path = "../console" }
e1000           = { path = "../e1000" }
event_types     = { path = "../event_types" }
interrupts      = { path = "../interrupts" }
ixgbe           = { path = "../ixgbe" }
keyboard        = { path = "../keyboard" }
logger          = { path = "../logger" }
memory          = { path = "../memory" }
mlx5            = { path = "../mlx5" }
mouse           = { path = "../mouse" }
mpmc = "0.1.6"
net             = { path = "../net" }
pci             = { path = "../pci" }
ps2             = { path = "../ps2" }
serial_port     = { path = "../serial_port" }
storage_manager = { path = "../storage_manager" }
nvme            = { path = "../nvme" }
ahci            = { path = "../ahci" }
fat32           = { path = "../fat32" }
block_cache     = { path = "../block_cache" }
storage_device  = { path = "../storage_device" }
fs_node         = { path = "../fs_node" }
vfs_node        = { path = "../vfs_node" }
root            = { path = "../root" }
partition_table = { path = "../partition_table" }
partition_device = { path = "../partition_device" }
mhc             = { path = "../mhc" }
mgi             = { path = "../mgi" }
intel_hda       = { path = "../intel_hda" }
