[package]
name = "dns_resolver"
version = "0.1.0"
authors = ["MaiOS Contributors"]
description = "Minimal DNS resolver for MaiOS - A/AAAA record lookup via UDP"
edition = "2021"

[dependencies]
log = "0.4.8"
spin = "0.9.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
net = { path = "../net" }

[lib]
crate-type = ["rlib"]
