[package]
name = "elf_loader"
version = "0.1.0"
authors = ["MaiOS Contributors"]
description = "ELF64 binary loader for MaiOS - parses ELF headers and loads segments into memory"
edition = "2021"

[dependencies]
log = "0.4.8"
memory = { path = "../memory" }
memory_structs = { path = "../memory_structs" }
pte_flags = { path = "../pte_flags" }
kernel_config = { path = "../kernel_config" }

[lib]
crate-type = ["rlib"]
