[package]
name = "environment"
version = "0.1.0"
authors = ["christinewang5 <chrissywang54@gmail.com>"]
edition = "2021"

[dependencies]
fs_node = { path = "../fs_node" }
hashbrown = "0.11.2"
path = { path = "../path" }
root = { path = "../root" }
spin = "0.9.4"
lazy_static = { features = ["spin_no_std"], version = "1.4.0" }
