[package]
name = "intel_hda"
version = "0.1.0"
authors = ["MaiOS Contributors"]
description = "Intel High Definition Audio PCI driver"
edition = "2021"

[dependencies]
log = "0.4.8"
spin = "0.9.4"
volatile = "0.2.7"
zerocopy = "0.5.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
memory = { path = "../memory" }
memory_structs = { path = "../memory_structs" }
pte_flags = { path = "../pte_flags" }
pci = { path = "../pci" }
audio_mixer = { path = "../audio_mixer" }
sleep = { path = "../sleep" }
spawn = { path = "../spawn" }
task = { path = "../task" }
time = { path = "../time" }

[lib]
crate-type = ["rlib"]
