[package]
name = "linux_syscall"
version = "0.1.0"
authors = ["MaiOS Contributors"]
description = "Linux syscall translation layer - maps Linux ABI numbers to MaiOS unified syscall table"
edition = "2021"

[dependencies]
log = "0.4.8"

[target.'cfg(target_arch = "x86_64")'.dependencies]
maios_syscall = { path = "../maios_syscall" }

[lib]
crate-type = ["rlib"]
