[package]
name = "memory_swap"
version = "0.1.0"
edition = "2021"

[lib]
name = "memory_swap"
crate-type = ["rlib"]

[dependencies]
log             = "0.4.8"
spin            = "0.9.4"
frame_allocator = { path = "../frame_allocator" }
memory_structs  = { path = "../memory_structs"  }
page_allocator  = { path = "../page_allocator"  }
memory          = { path = "../memory"          }
pte_flags       = { path = "../pte_flags"       }
storage_device  = { path = "../storage_device"  }
io              = { path = "../io"              }